--- a/styles/base.css
+++ b/styles/base.css
@@ -10,7 +10,20 @@
   --gh-font: 'Roboto', Arial, sans-serif;
   --gh-font-bold: 'Roboto', Arial, sans-serif;
 }
-
+.roboto-500 {
+  font-family: 'Roboto', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings: 'wdth' 100;
+}
+.roboto-700 {
+  font-family: 'Roboto', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  font-variation-settings: 'wdth' 100;
+}
 body {
   margin: 0;
   font-family: 'Roboto', var(--gh-font);
@@ -23,6 +36,11 @@ body {
 .material-symbols-outlined {
   font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
 }
+
+.material-symbols-outlined {
+  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+}
+
 .absolute {
   position: absolute;
 }
@@ -260,7 +278,7 @@ body {
 }
 .gh-table-container {
   width: 100%;
-  margin: 32px auto 42px auto;
+  margin: 0 auto 42px auto;
   background: #fff;
   overflow-x: auto;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.03);
@@ -307,10 +325,16 @@ td.gh-table-availability {
   border-radius: 2rem;
   padding: 10px 30px;
   font-size: 18px;
-
+  font-family: 'Roboto', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings: 'wdth' 100;
   cursor: pointer;
   transition: background 0.2s;
-  font-family: 'Roboto', var(--gh-font);
+}
+.text-14 {
+  font-size: 14px;
 }
 .gh-btn-table:hover,
 .gh-btn-table:focus {
@@ -379,7 +403,7 @@ td.gh-table-availability {
 
 .gh-action-buttons {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 1.5rem;
   margin: 25px auto 0 auto;
   padding-right: 39px;
@@ -687,11 +711,7 @@ td.gh-table-availability {
 }
 .gh-select-options::-webkit-scrollbar-thumb {
   background: #b0b0b0;
-  border-radius: 12px;
-  min-height: 40px;
-  border: none;
-}
-.gh-select-options::-webkit-scrollbar-track {
+
   background: #ededed;
   border-radius: 12px;
   border: none;
