--- a/styles/base.css
+++ b/styles/base.css
@@ -882,7 +882,7 @@ td.gh-table-availability {
 }
 .gh-attendee-details-input,
 .gh-attendee-details-textarea {
-  width: 100%;
+  /* width: 100%; */
   padding: 0.9rem 1.2rem;
   font-size: 1rem;
   border: 1.5px solid #bfc7d1;
