--- a/styles/base.css
+++ b/styles/base.css
@@ -51,10 +51,6 @@ body {
   font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
 }
 
-.material-symbols-outlined {
-  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
-}
-
 .absolute {
   position: absolute;
 }
@@ -657,8 +653,10 @@ td.gh-table-availability {
   }
 }
 .gh-additional-info-label {
-  font-size: 1rem;
-  color: #888;
+  font-size: 14px;
+  color: #969696;
+
+  padding-top: 5px;
 }
 .gh-create-account {
   display: flex;
@@ -790,8 +788,6 @@ td.gh-table-availability {
 }
 
 .gh-toggle-icon {
-  font-size: 1.2rem;
-  margin-right: 0.2rem;
   transition: transform 0.2s;
   color: #969696;
 }
@@ -800,7 +796,7 @@ td.gh-table-availability {
 }
 
 .gh-add-icon {
-  font-size: 18px;
+  font-size: 15px;
   color: #969696;
 }
 
