--- a/styles/base.css
+++ b/styles/base.css
@@ -870,11 +870,15 @@ td.gh-table-availability {
   font-size: 1rem;
   font-weight: 600;
   color: #222;
+
   margin-bottom: 0.2rem;
   margin-top: 1.2rem;
 }
 .gh-attendee-details-label:first-child {
   margin-top: 0;
+}
+.gh-attendee-details-textarea {
+  min-height: 100px;
 }
 .gh-attendee-details-input,
 .gh-attendee-details-textarea {
