--- a/styles/base.css
+++ b/styles/base.css
@@ -853,7 +853,7 @@ td.gh-table-availability {
   position: relative;
 }
 .gh-attendee-details-label {
-  font-size: 1rem;
+  font-size: 14px;
   font-weight: 600;
   color: #222;
 
@@ -891,7 +891,7 @@ td.gh-table-availability {
 .gh-attendee-details-radio-group {
   display: flex;
   align-items: center;
-  gap: 1.2rem;
+  gap: 50px;
   margin-bottom: 0.5rem;
 }
 .gh-attendee-details-radio {
