--- a/styles/base.css
+++ b/styles/base.css
@@ -37,6 +37,9 @@ body {
 .material-symbols-outlined {
   font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
 }
+.hidden {
+  display: none !important;
+}
 .absolute {
   position: absolute;
 }
@@ -402,7 +405,6 @@ td.gh-table-availability {
   justify-content: center;
   gap: 1.5rem;
   margin: 25px auto 0 auto;
-  padding-right: 39px;
 }
 .gh-btn-large {
   padding: 10px 30px;
@@ -579,7 +581,7 @@ td.gh-table-availability {
   font-size: 15px;
   font-family: 'HelveticaNeue-Medium', sans-serif;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   gap: 6px;
   /* margin-bottom: 18px; */
   cursor: pointer;
@@ -654,7 +656,9 @@ td.gh-table-availability {
 .gh-create-icon {
   font-size: 18px;
   color: var(--gh-primary);
-  margin-right: 4px;
+}
+.gh-create-label {
+  padding-top: 5px;
 }
 .gh-create-account a {
   color: var(--gh-primary);
@@ -671,6 +675,7 @@ td.gh-table-availability {
   width: 100%;
   position: relative;
   margin-bottom: 10px;
+  margin-top: 3px;
 }
 .gh-select-trigger {
   width: 100%;
@@ -1016,10 +1021,9 @@ td.gh-table-availability {
   font-size: 16px;
   font-family: 'HelveticaNeue-Medium', sans-serif;
   gap: 4px;
-  margin-top: 2px;
 }
 
 .gh-need-account a:hover {
-  text-decoration: underline;
+  text-decoration: none;
   color: #003e6b;
 }
