--- a/styles/base.css
+++ b/styles/base.css
@@ -811,9 +811,6 @@ td.gh-table-availability {
   padding: 0.3rem 0.2rem;
 }
 
-#selected-attendees-list {
-  /* margin-bottom: 24px; */
-}
 #selected-attendees-list:empty {
   margin: 0;
 }
@@ -824,8 +821,12 @@ td.gh-table-availability {
   margin-top: 18px;
   font-family: 'HelveticaNeue-Bold', sans-serif;
 }
-.gh-selected-attendee {
-  /* margin-left: 0.5rem; */
+.gh-selected-attendees {
+  margin: 6px 0 0 0;
+}
+.gh-selected-label {
+  font-size: 19px;
+  font-weight: 700;
 }
 .gh-selected-attendee-name {
   font-weight: 700;
@@ -874,9 +875,9 @@ td.gh-table-availability {
 .gh-attendee-details-input,
 .gh-attendee-details-textarea {
   /* width: 100%; */
-  padding: 0.9rem 1.2rem;
+  padding: 10px 1.2rem;
   font-size: 1rem;
-  border: 1.5px solid #bfc7d1;
+  border: 1px solid rgba(51, 51, 51, 1);
   border-radius: 0.4rem;
   background: #fff;
   color: #222;
