--- a/styles/base.css
+++ b/styles/base.css
@@ -27,12 +27,8 @@
 
 body {
   margin: 0;
+  padding: 0;
   font-family: 'HelveticaNeue-Medium', sans-serif;
-  background: var(--gh-bg);
-  color: var(--gh-text);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
 }
 .material-symbols-outlined {
   font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
@@ -399,7 +395,9 @@ td.gh-table-availability {
 .gh-section {
   margin-bottom: 0;
 }
-
+.gh-back-link-text {
+  padding-top: 5px;
+}
 .gh-action-buttons {
   display: flex;
   justify-content: center;
@@ -572,7 +570,7 @@ td.gh-table-availability {
   border: 1.5px solid #bfc7d1;
   border-radius: 0.4rem;
   background: #fff;
-  color: #222;
+  color: #333;
   margin-bottom: 0.5rem;
   font-family: 'Roboto', var(--gh-font);
 }
@@ -615,7 +613,7 @@ td.gh-table-availability {
   border: 1px solid #333;
   border-radius: 4px;
   background: #fff;
-  color: #222;
+  color: #333;
   font-family: 'Roboto', var(--gh-font);
   box-sizing: border-box;
 }
@@ -683,7 +681,7 @@ td.gh-table-availability {
   border: 1px solid #333;
   border-radius: 4px;
   background: #fff;
-  color: #222;
+  color: #333;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -829,9 +827,8 @@ td.gh-table-availability {
   font-weight: 700;
 }
 .gh-selected-attendee-name {
-  font-weight: 700;
-  font-size: 16px;
-  color: #222;
+  font-size: 15px;
+  color: #333;
   font-family: 'HelveticaNeue-Bold', sans-serif;
 }
 .gh-add-details-link {
@@ -861,7 +858,7 @@ td.gh-table-availability {
 .gh-attendee-details-label {
   font-size: 14px;
   font-weight: 600;
-  color: #222;
+  color: #333;
 
   margin-bottom: 0.2rem;
   margin-top: 1.2rem;
@@ -880,7 +877,7 @@ td.gh-table-availability {
   border: 1px solid rgba(51, 51, 51, 1);
   border-radius: 0.4rem;
   background: #fff;
-  color: #222;
+  color: #333;
   font-family: 'Roboto', var(--gh-font);
 }
 .gh-attendee-details-char-count {
@@ -932,7 +929,7 @@ td.gh-table-availability {
 }
 .gh-select-option[data-value='none'] .gh-option-bold {
   font-weight: 700;
-  color: #222;
+  color: #333;
 }
 .gh-select-option[data-value='none'] {
   margin-bottom: 0.3rem;
@@ -1027,4 +1024,9 @@ td.gh-table-availability {
 .gh-need-account a:hover {
   text-decoration: none;
   color: #003e6b;
+}
+.gh-selected-label {
+  font-family: 'HelveticaNeue-Bold', sans-serif;
+  font-size: 19px;
+  color: #333;
 }
