--- a/styles/base.css
+++ b/styles/base.css
@@ -716,7 +716,7 @@ input[type='radio'] {
   flex-direction: column;
   gap: 22px;
 }
-.gh-label-input-group {
+.gh-label {
   display: flex;
   flex-direction: column;
   gap: 7px;
@@ -988,9 +988,12 @@ input[type='checkbox'] {
 .gh-attendee-details-checkbox-label-text {
   padding-top: 3px;
 }
-.gh-attendee-details-input {
+.gh-label-group {
   width: 100%;
-  margin-bottom: 1rem;
+  margin-bottom: 8px;
+  gap: 7px;
+  display: flex;
+  flex-direction: column;
 }
 .gh-attendee-details-textarea {
   width: 100%;
@@ -1139,7 +1142,7 @@ input[type='checkbox'] {
   min-width: 320px;
 }
 .gh-travel-form-h3 {
-  margin-bottom: 1.2rem;
+  margin-bottom: 27px;
 }
 .gh-input-mb1 {
   width: 100%;
