--- a/styles/base.css
+++ b/styles/base.css
@@ -712,7 +712,7 @@ input[type='radio'] {
 .gh-form-title {
   font-size: 19px;
   font-weight: 700;
-  margin-bottom: 13px;
+  /* margin-bottom: 13px; */
   color: #333;
   font-family: 'HelveticaNeue-Bold', sans-serif;
 }
@@ -1191,6 +1191,7 @@ input[type='checkbox'] {
 }
 .gh-form-title-left {
   text-align: left;
+  margin-bottom: 0;
 }
 .gh-form-section-mb {
   margin-bottom: 24px;
@@ -1209,7 +1210,7 @@ input[type='checkbox'] {
 .gh-travel-form-flex {
   display: flex;
   gap: 66px;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 }
 .gh-travel-form-col {
   flex: 1;
@@ -1261,15 +1262,24 @@ input[type='checkbox'] {
 }
 .gh-mb-1-5 {
   margin-bottom: 1.5rem;
+  color: rgba(51, 51, 51, 1);
+}
+.gh-mb-1-5 a {
+  text-decoration: none;
+  color: #075697;
 }
 .gh-mb-2-5 {
-  margin-bottom: 2.5rem;
+  margin-bottom: 8px;
 }
 .gh-mb-2-5-top {
   margin: 2.5rem 0 0 0;
 }
 .gh-flex {
   display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(151, 151, 151, 1);
+  padding-bottom: 30px;
+  line-height: 25px;
 }
 .gh-flex-wrap {
   flex-wrap: wrap;
